--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,6 @@ version: '3'
 services:
 
   react:
-    image: fe-image
+    image: popalexandra30641frontend.azurecr.io/popalexandra30641frontend
     ports:
        - "80:80"
