--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-moment": "^0.8.4",
     "react-router-dom": "^4.3.1",
     "react-scripts": "2.1.3",
+    "react-scroll-to-bottom": "^4.2.0",
     "react-stomp": "^5.1.0",
     "react-table": "^6.10.0",
     "reactstrap": "^7.0.2",
